cot-cli/tests/snapshot_testing/help/snapshots/cli__snapshot_testing__help__help_cli_completions.snap
---
source: cot-cli/tests/snapshot_testing/help/mod.rs
info:
  program: cot
  args:
    - help
    - cli
    - completions
---
success: true
exit_code: 0
----- stdout -----
Generate completions for the Cot CLI

Usage: cot cli completions [OPTIONS] <SHELL>

Arguments:
  <SHELL>  Shell to generate completions for [possible values: bash, elvish, fish, powershell, zsh]

Options:
      --release            Use target/release instead of target/debug when looking for the project
                           binary
      --build              Build the binary if it does not exist
  -p, --package <PACKAGE>  Package to use, in case you're running this in a workspace
  -v, --verbose...         Increase logging verbosity
  -q, --quiet...           Decrease logging verbosity
  -h, --help               Print help

----- stderr -----
