cot-cli/tests/snapshot_testing/help/snapshots/cli__snapshot_testing__help__help_cli_manpages.snap
---
source: cot-cli/tests/snapshot_testing/help/mod.rs
info:
  program: cot
  args:
    - help
    - cli
    - manpages
---
success: true
exit_code: 0
----- stdout -----
Generate manpages for the Cot CLI

Usage: cot cli manpages [OPTIONS]

Options:
  -o, --output-dir <OUTPUT_DIR>  Directory to write the manpages to [default: current directory]
      --release                  Use target/release instead of target/debug when looking for the
                                 project binary
      --build                    Build the binary if it does not exist
  -c, --create                   Create the directory if it doesn't exist
  -p, --package <PACKAGE>        Package to use, in case you're running this in a workspace
  -v, --verbose...               Increase logging verbosity
  -q, --quiet...                 Decrease logging verbosity
  -h, --help                     Print help

----- stderr -----
