cot-cli/tests/snapshot_testing/help/snapshots/cli__snapshot_testing__help__help_migration_list.snap
---
source: cot-cli/tests/snapshot_testing/help/mod.rs
info:
  program: cot
  args:
    - help
    - migration
    - list
---
success: true
exit_code: 0
----- stdout -----
List all migrations for a Cot project

Usage: cot migration list [OPTIONS] [PATH]

Arguments:
  [PATH]  Path to the crate directory to list migrations for [default: current directory]

Options:
      --release            Use target/release instead of target/debug when looking for the project
                           binary
      --build              Build the binary if it does not exist
  -p, --package <PACKAGE>  Package to use, in case you're running this in a workspace
  -v, --verbose...         Increase logging verbosity
  -q, --quiet...           Decrease logging verbosity
  -h, --help               Print help

----- stderr -----
