cot-cli/tests/snapshot_testing/help/snapshots/cli__snapshot_testing__help__help_migration_make.snap
---
source: cot-cli/tests/snapshot_testing/help/mod.rs
info:
  program: cot
  args:
    - help
    - migration
    - make
---
success: true
exit_code: 0
----- stdout -----
Generate migrations for a Cot project

Usage: cot migration make [OPTIONS] [PATH]

Arguments:
  [PATH]  Path to the crate directory to generate migrations for [default: current directory]

Options:
      --app-name <APP_NAME>      Name of the app to use in the migration [default: crate name]
      --release                  Use target/release instead of target/debug when looking for the
                                 project binary
      --build                    Build the binary if it does not exist
      --output-dir <OUTPUT_DIR>  Directory to write the migrations to [default: the migrations/
                                 directory in the crate's src/ directory]
  -p, --package <PACKAGE>        Package to use, in case you're running this in a workspace
  -v, --verbose...               Increase logging verbosity
  -q, --quiet...                 Decrease logging verbosity
  -h, --help                     Print help

----- stderr -----
