cot-cli/tests/snapshot_testing/help/snapshots/cli__snapshot_testing__help__help_new.snap
---
source: cot-cli/tests/snapshot_testing/help/mod.rs
info:
  program: cot
  args:
    - help
    - new
---
success: true
exit_code: 0
----- stdout -----
Create a new Cot project

Usage: cot new [OPTIONS] <PATH>

Arguments:
  <PATH>  Path to the directory to create the new project in

Options:
      --name <NAME>          Set the resulting crate name [default: the directory name]
      --release              Use target/release instead of target/debug when looking for the project
                             binary
      --build                Build the binary if it does not exist
      --use-git              Use the latest `cot` version from git instead of a published crate
      --cot-path <COT_PATH>  Use `cot` from the specified path instead of a published crate
  -p, --package <PACKAGE>    Package to use, in case you're running this in a workspace
  -v, --verbose...           Increase logging verbosity
  -q, --quiet...             Decrease logging verbosity
  -h, --help                 Print help

----- stderr -----
