cot-cli/tests/snapshot_testing/help/snapshots/cli__snapshot_testing__help__long_help.snap
---
source: cot-cli/tests/snapshot_testing/help/mod.rs
info:
  program: cot
  args:
    - "-p"
    - cot-cli
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Command-line interface for the Cot web framework

Usage: cot [OPTIONS] <COMMAND>

Commands:
  new        Create a new Cot project
  migration  Manage migrations for a Cot project
  cli        Manage Cot CLI
  help       Print this message or the help of the given subcommand(s)

Options:
      --release            Use target/release instead of target/debug when looking for the project
                           binary
      --build              Build the binary if it does not exist
  -p, --package <PACKAGE>  Package to use, in case you're running this in a workspace
  -v, --verbose...         Increase logging verbosity
  -q, --quiet...           Decrease logging verbosity
  -h, --help               Print help
  -V, --version            Print version

----- stderr -----
